# motioncam-fs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app_icon.icns  camera-matrix.json  camera-name.json  camera-settings.json  fs-calibration.json  resources.qrc  vcpkg-configuration.json  vcpkg.json
.history/ui/: mainwindow_20250916171509.ui  mainwindow_20250916171608.ui
assets/: matrix-camera.json  unique-name.json
help/: index.html
include/: AdvancedOptionsDialog.h  AudioWriter.h  CalibrationProfile.h  CameraFrameMetadata.h  CameraMetadata.h  CameraSettings.h  IFuseFileSystem.h  IVirtualFileSystem.h  LRUCache.h  MatrixProfile.h  Measure.h  MetadataOverrides.h  SettingsDialog.h  SingleApplication.h  Types.h  Utils.h  VirtualFileSystemImpl_MCRAW.h  mainwindow.h  optionsdialog.h
include/macos/: FuseFileSystemImpl_MacOS.h
include/win/: FuseFileSystemImpl_Win.h  dirInfo.h  virtualizationInstance.h
resources/: app.rc  fs-calibration.json
src/: AdvancedOptionsDialog.cpp  AudioWriter.cpp  CalibrationProfile.cpp  CameraFrameMetadata.cpp  CameraMetadata.cpp  CameraSettings.cpp  MetadataOverrides.cpp  SettingsDialog.cpp  Utils.cpp  VirtualFileSystemImpl_MCRAW.cpp  main.cpp  mainwindow.cpp  optionsdialog.cpp
src/macos/: FuseFileSystemImpl_MacOS.cpp
src/win/: FuseFileSystemImpl_Win.cpp  FuseFileSystemImpl_Win.h.cpp  dirInfo.cpp  fusefilesystemimpl_win.cpp  virtualizationInstance.cpp
ui/: SettingsDialog.ui  advancedoptionsdialog.ui  mainwindow.ui  optionsdialog.ui
